welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: ')' expected but '=' found.
      diag = diag + 1
           ^