welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() 
{
  var avancement = 0
  ecritMessage(avancement)
  while ( (getX(),getY()) != (getMondeLargeur()-1,getMondeHauteur()-1))
  {
    for (largeur <- 0 to (getMondeLargeur() -1))
    {
      for (hauteur <- 0 to (getMondeHauteur() -1)
      {
        go()
        avancement = avancement + 1
        ecritMessage(avancement)
      }
      if (diag != getMondeHauteur() -1)
      diag = diag + 1
      setPos(0,diag)
      avancement = avancement + 1
      ecritMessage (avancement)
    }
    /*diag = 1*/
    /*setPos(1,getMondeHauteur() -1)
    avancement = avancement + 1
    ecritMessage(avancement)
    while (getX() != getMondeLargeur() - 1)
    {
      go()
      avancement = avancement + 1
      ecritMessage(avancement)
    }*/
  }
}

def go()
{
  var X = getX()
  var Y = getY()
  setPos(X+1,Y-1)
}